# kapla-test

./: .gitignore  README.md  pyproject.toml  setup.cfg
kapla/test/: collector.py  specs.py
tests/: conftest.py  test_classic.py  test_example.yaml
